--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>WWE Universe Manager</title>
-        <link data-trunk rel="css" href="styles.css" />
+        <link data-trunk rel="css" href="./style/output.css" />
         <link data-trunk rel="copy-dir" href="public" />
         <link data-trunk rel="rust" data-wasm-opt="z" />
+        <!-- <link data-trunk rel="tailwind-css" href="/style/tailwind.css" /> -->
     </head>
-    <body></body>
+    <body class="bg-gray-800 text-amber-200"></body>
 </html>
